<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="12dp"
    android:backgroundTint="#FFFFFF"
    android:foregroundTint="#FFFFFF"
    android:gravity="right"
    android:orientation="horizontal"
    android:padding="20dp"
    android:soundEffectsEnabled="true"
    android:splitMotionEvents="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="1"
        android:fadingEdge="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/info"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView

                style="@style/MyActionText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/exemplo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/gasolina" />


            <EditText
                android:id="@+id/iv_gasolina"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="0.1"
                android:hint="@string/shr_hint_gasolina" />


            <ImageView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/etanol" />

            <EditText
                android:id="@+id/iv_etanol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_weight="0.1"
                android:hint="@string/shr_hint_etanol" />

            <Button
                android:id="@+id/btn_comparar"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:elevation="3dp"
                android:padding="1.0dp"
                android:shadowRadius="@android:integer/config_longAnimTime"
                android:text="@string/btn_calc"
                android:textAlignment="center"
                android:visibility="visible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/iv_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp" />

            <ImageView

                android:layout_width="350dp"
                android:layout_height="250dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/abastecimento" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:backgroundTint="#4CAF50"
                app:srcCompat="@android:drawable/btn_star_big_on"
                android:layout_gravity="right"/>


        </LinearLayout>


    </ScrollView>



</LinearLayout>